# CPP-Assignment

./: README.md
Code Folder/: BagInterface.h  LinkedBag.h  LinkedBag340.cpp  LinkedBagClient340.cpp  Node.cpp
Code Folder/PartC_SmartPointers/: Include_SmartPointers.h  LinkedBagClient_SmartPointers.cpp  PartC_SmartPointers.cpp  SPLinkedBag.cpp  SPLinkedBag.h  SPNode.cpp  SPNode.h
PartA-B/: CMakeLists.txt  Include.h  LinkedBag.cpp  Node.h
